--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
         img{
             border-radius: 12px;
         }
+        nav ul li{
+            display: inline-block;
+        }
     </style>   
 </head>
 <body>
