--- a/index.html
+++ b/index.html
@@ -24,9 +24,6 @@
             padding: 10px;
             text-align: center;
         }
-        header a{
-            text-decoration: none;
-        }
         body {background-color: navajowhite;
         font-family: Oswald, Arial;
         }
@@ -46,8 +43,16 @@
         img{
             border-radius: 12px;
         }
-        nav ul li{
+        nav{
+            background-color: #0b71c6;
+            height: 50px;
+        }
+        nav ul li {
             display: inline-block;
+            padding: 13px;
+        }
+        nav ul li a{
+            text-decoration: none;
         }
     </style>   
 </head>
