--- a/index.html
+++ b/index.html
@@ -44,15 +44,35 @@
             border-radius: 12px;
         }
         nav{
-            background-color: #0b71c6;
+            background-color: salmon;
             height: 50px;
         }
         nav ul li {
             display: inline-block;
-            padding: 13px;
+            margin-right: 10px;
+            padding-top: 13px;
+            padding-right: 10px;
         }
         nav ul li a{
             text-decoration: none;
+            position: relative;
+        }
+        nav ul li a:before {
+        content: "";
+        display: block;
+        width: 10px;
+        height: 10px;
+        border-radius: 50%;
+        background-color: navajowhite;
+        position: absolute;
+        top: 50%;
+        left: 100%;
+        transform: translateY(-20%) translateX(20%);
+        opacity: 0;
+        transition: opacity 0.3s ease-in-out;
+        }
+        nav ul li a:hover:before{
+            opacity: 1;
         }
     </style>   
 </head>
