--- a/HTML.html
+++ b/HTML.html
@@ -106,7 +106,7 @@
                     </div>
                     
                     <div>              
-                        <img src="./Images/work3.jpg" alt="" class="skills__pic">
+                        <img src="./Images/Skills.png" alt="" class="skills__pic">
                     </div>
                 </div>
             </section>
