fix showing nav in mobile

--- a/HTML.html
+++ b/HTML.html
@@ -22,8 +22,7 @@
                     </ul>
                 </div>
                 <div class="nav__toggle" id="nav-toggle">
-                    <img src="./Images/HTML logo.png">
-                    <button class="nav__toggle">Menu</button>
+                    <button>Menu</button>
                 </div>
             </nav>
         </header>
