nav button style

--- a/HTML.html
+++ b/HTML.html
@@ -22,7 +22,7 @@
                     </ul>
                 </div>
                 <div class="nav__toggle" id="nav-toggle">
-                    <button>Menu</button>
+                    <button class="nav__button"></button>
                 </div>
             </nav>
         </header>
